# cus_segmentation

./: README.md  home.html  index.html  package-lock.json  pyproject.toml  requirements.txt  results.html  script.js  style.css  upload.html
customer_segmentation/: main.py
customer_segmentation/temp_files/: 3d_plot.html
customer_segmentation/utils/: utils_scripts.py
frontend/: home.html  index.html  results.html  script.js  style.css  upload.html
interface/: api.py
interface/temp_files/: 3d_plot.html
tests/: unit_test.py
